# banff-booker

./: .gitignore  README.md  bootstrap.py  config.example.yaml  package-lock.json  package.json  pyproject.toml  setup.bat  setup.sh  setup_project.py
.agent/skills/banff-booker/: SKILL.md
.github/: copilot-instructions.md
e2e/: reservation.spec.ts
src/auto_booker/: __init__.py  auth.py  booking.py  browser.py  config.py  main.py  notify.py  search.py
tests/: test_booking.py  test_config.py  test_search.py
